Fix messages z-index
Previously the messages container had a higher z-index than the
navbar so the navbar was rendered unusable. Now only the message
boxes overlay the navbar.

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -5916,13 +5916,14 @@ figcaption {
   margin: 0 auto;
   position: fixed;
   top: 0;
-  z-index: 1000;
   width: 100%; }
 
 .messages__message {
   text-align: center;
   -webkit-animation: scale-up 0.25s;
   animation: scale-up 0.25s;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  position: relative;
+  z-index: 1000; }
 
 /*# sourceMappingURL=main.css.map */
